# The-TikTok-Bot

./: LICENSE  LICENSE.txt  README.md  setup.cfg
bot/requests-V1/: __init__.py  main.py
bot/requests-V2/: __init__.py  main.py
bot/selenium-V2/: TikTokBot.py  autoViews.py
setup/: setup.cfg  setup.py
