 [metadata]
Name = {Nyumat}
version = file: V2
author = Thomas
author-email = nyumat18@gmail.com
home-page = https://github.com/Nyumat
description = {A TikTok Bot to automate the share and view process.}
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE.txt
platform = OS X,Windows,Linux
keywords = {tiktok,bot,automation,views,shares,tools,python}
classifiers =
    Development Status :: Work in Progress
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Any
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: requests,selenium,os,time,threading

[main]
file-pattern = main.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[main.py]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[__init.py__]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
